<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uth.michail.konstantina.signalquality.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/university"
        android:id="@+id/university_id"
        android:textStyle="normal"
        android:textSize="20dp"
        android:gravity="center" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/thesis"
        android:id="@+id/thesis_id"
        android:textStyle="normal"
        android:textSize="20dp"
        android:gravity="center" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/title_id"
        android:textStyle="bold"
        android:textSize="20dp"
        android:gravity="center"
        android:textIsSelectable="false" />

    <ImageView
        android:layout_width="129dp"
        android:layout_height="129dp"
        android:id="@+id/imageView_id"
        android:src="@drawable/imagemain"
        android:layout_gravity="center"
        android:layout_margin="20dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/menuButton"
        android:id="@+id/menuButton_id" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name"
        android:id="@+id/name_id"
        android:layout_gravity="center"
        android:textStyle="normal"
        android:textSize="20dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/am"
        android:id="@+id/am_id"
        android:layout_gravity="center"
        android:textStyle="normal"
        android:textSize="20dp" />
</LinearLayout>
